--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,10 @@
     <string name="app_name">technical_test_novian</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="roles">
+        <item>Purchasing</item>
+        <item>Administrator</item>
+        <item>Accounting</item>
+        <item>HRD</item>
+    </string-array>
 </resources>
